examples/loco_example/tests/requests/snapshots/can_add_note@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(add_note_request.status_code(), add_note_request.text())"
---
(
    200,
    "{\"created_at\":\"DATE\",\"updated_at\":\"DATE\",\"id\":ID,\"title\":\"loco\",\"content\":\"loco note test\"}",
)
